test/classes/jplevyak/union_type_hierarchy-2.good
Error: Unresolved call 'f(:C)' (union_type_hierarchy-2.chpl:16)
Candidates are:
  f(a: D) (union_type_hierarchy-2.chpl:10)
